# EssentiaEngine

./: .gitignore  CMakeLists.txt  Doxyfile.in
include/: DebugTools  EssentiaEngine
include/Core/: Essentia_ECS  demoShader.h  enums.hpp  shader.h  shader.hpp  values.hpp
include/Core/AnimationSys/: Animation.hpp  IAnimation.hpp  Keyframe.hpp  SkeletalAnimation.hpp  SpriteAnimation.hpp  SpriteKeyframe.hpp
include/Core/AnimationSys/ASM/: AnimationState.hpp  AnimationStateMachine.hpp
include/Core/AnimationSys/BoneSys/: AssimpNodeData.hpp  Bone.hpp  BoneInfo.hpp  Skeleton.hpp
include/Core/AnimationSystem/: Bone.hpp  Skeleton.hpp
include/Core/Components/: components.hpp  transform.hpp
include/Core/Configuration/: AppConfig.hpp  ConfigLoader.hpp  OpenGLConfig.hpp  RenderConfig.hpp  WindowConfig.hpp
include/Core/ECS/: EnTT.hpp  Entity.hpp  EntityManager.hpp  IComponent.hpp  ISystem.hpp  Scene.hpp  SceneManager.hpp  SystemDispatcher.hpp
include/Core/EventSystem/: EventListener.hpp  EventSystem.hpp  IEvent.hpp  events.hpp
include/Core/EventSystem/Events/: InitEvent.hpp
include/Core/Exceptions/: Exceptions.hpp  UnreachableEntityException.hpp
include/Core/Graphics/: Material.hpp  Mesh.hpp  Shader.hpp  ShaderGen.hpp  ShaderLab.hpp  Texture.hpp  TextureManager.hpp  UVRegion.hpp  Vertex.hpp  assimp_glm_helpers.hpp
include/Core/Graphics/HdriCubemap/: hdriCubemap.hpp
include/Core/Memory/: WeakptrWrapper.hpp
include/Core/Systems/: CameraBase.hpp  CameraOrtho.hpp  CameraPerspective.hpp
include/Debug/: glmDebug.hpp  openglDebug.h  openglDebug.hpp
include/Framework/Camera/: Camera2D.hpp  CameraBase.hpp  CameraOrtho.hpp  CameraPerspective.hpp  Skybox.hpp
include/Framework/Components/: Animator.hpp  LightSource.hpp  Model.hpp  Sprite.hpp  Transform.hpp  components.hpp
include/Framework/Components/Model/: BoneInfo.hpp  Model.hpp  ModelCacheManager.hpp
include/Framework/Input/: InputManager.hpp  MouseData.hpp
include/Framework/Systems/: AnimationController.hpp  Renderer2D.hpp  Renderer3D.hpp  systems.hpp
include/Framework/Time/: Time.hpp  Timer.hpp
include/Framework/Windowing/: WindowContext.hpp  WindowManager.hpp
include/Shared/: defaultModels.hpp  enums.hpp  key_input_values.hpp  user_values.hpp  values.hpp
resources/: atlas.json  atlas2.json
resources/GameDemo/: link.json
resources/Models/bones/: Polin-Ani.fbx
resources/Shaders/: cubemap.frag  fragment.frag  test.glsl  utils.frag  vertex.vert
src/: EntityTemplate.cpp  GameObjectTemplate.cpp  SceneTemplate.cpp  main.cpp  testScene.cpp
src/Core/: demoShader.cpp  main.cpp  shader.cpp
src/Core/AnimationSys/: SkeletalAnimation.cpp  SpriteAnimation.cpp
src/Core/AnimationSys/ASM/: AnimationState.cpp  AnimationStateMachine.cpp
src/Core/AnimationSys/BoneSys/: Bone.cpp  Skeleton.cpp
src/Core/AnimationSystem/: Bone.cpp  Skeleton.cpp
src/Core/Configuration/: ConfigLoader.cpp  EssentiaConfig.cpp
src/Core/ECS/: Entity.cpp  EntityManager.cpp  Scene.cpp  SceneManager.cpp  SystemDispatcher.cpp
src/Core/Exceptions/: Exceptions.cpp
src/Core/Graphics/: Mesh.cpp  ShaderGen.cpp  ShaderLab.cpp  Texture.cpp  TextureManager.cpp  shader.cpp
src/Core/Memory/: TinyEXIF.cpp  tinyxml2.cpp
src/Core/Systems/: CameraBase.cpp  CameraOrtho.cpp  CameraPerspective.cpp
src/Debug/: openglDebug.cpp
src/Framework/Camera/: Camera2D.cpp  CameraBase.cpp  CameraOrtho.cpp  CameraPerspective.cpp  Skybox.cpp
src/Framework/Components/: Animator.cpp  LightSource.cpp  Model.cpp  Sprite.cpp  Transform.cpp
src/Framework/Components/Model/: Model.cpp  ModelCacheManager.cpp
src/Framework/Input/: InputManager.cpp
src/Framework/Systems/: AnimationController.cpp  Renderer2D.cpp  Renderer3D.cpp
src/Framework/Time/: Time.cpp  Timer.cpp
src/Framework/Windowing/: WindowManager.cpp
src/GameDemo/: 2dGame.cpp  demoScene.cpp  player.cpp
src/GameDemo/headers/: definitions.hpp  demoScene.hpp  player.hpp
src/Shared/: defaultModels.cpp  user_values.cpp
src/Testing/: GameObjectTemplate.cpp  SceneTemplate.cpp  generalTesting.cpp
